--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,11 @@
     background-color: rgb(239, 83, 83);
     display: grid;
     grid-template-columns: 25% 1fr;
-    grid-template-rows: 100px 600px 100px;
+    grid-template-rows: auto;
     grid-template-areas: 
             "header header"
             "sidebar main "
+            "posts posts"
             "footer footer"
 }
 .container {
